Desktop first version

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </li>
         </ul>
       </article>
-      <article>
+      <article class="cards">
         <section class="card google">
           <div class="card-header">
             <img
@@ -53,14 +53,35 @@
               src="img/google-testimonial.png"
               alt="google testimonial"
             />
-            <div class="stars">
-              <img src="img/Star_fill.svg" alt="Star 1 given" />
-              <img src="img/Star_fill.svg" alt="Star 2 given" />
-              <img src="img/Star_fill.svg" alt="Star 3 given" />
-              <img src="img/Star_fill.svg" alt="Star 4 given" />
-              <img src="img/Star_fill_gray.svg" alt="Star 5 not given" />
+            <div class="card-header-stars">
+              <img
+                class="card-header-star"
+                src="img/Star_fill.svg"
+                alt="Star 1 given"
+              />
+              <img
+                class="card-header-star"
+                src="img/Star_fill.svg"
+                alt="Star 2 given"
+              />
+              <img
+                class="card-header-star"
+                src="img/Star_fill.svg"
+                alt="Star 3 given"
+              />
+              <img
+                class="card-header-star"
+                src="img/Star_fill.svg"
+                alt="Star 4 given"
+              />
+              <img
+                class="card-header-star"
+                src="img/Star_fill_gray.svg"
+                alt="Star 5 not given"
+              />
             </div>
           </div>
+          <h2>Samantha Lee</h2>
           <p>The checklist ensures that the review process is thorough</p>
         </section>
         <section class="card meta">
@@ -70,14 +91,35 @@
               src="img/meta-testimonial.png"
               alt="meta testimonial"
             />
-            <div class="stars">
-              <img src="img/Star_fill.svg" alt="Star 1 given" />
-              <img src="img/Star_fill.svg" alt="Star 2 given" />
-              <img src="img/Star_fill.svg" alt="Star 3 given" />
-              <img src="img/Star_fill.svg" alt="Star 4 given" />
-              <img src="img/Star_fill.svg" alt="Star 5 given" />
+            <div class="card-header-stars">
+              <img
+                class="card-header-star"
+                src="img/Star_fill.svg"
+                alt="Star 1 given"
+              />
+              <img
+                class="card-header-star"
+                src="img/Star_fill.svg"
+                alt="Star 2 given"
+              />
+              <img
+                class="card-header-star"
+                src="img/Star_fill.svg"
+                alt="Star 3 given"
+              />
+              <img
+                class="card-header-star"
+                src="img/Star_fill.svg"
+                alt="Star 4 given"
+              />
+              <img
+                class="card-header-star"
+                src="img/Star_fill.svg"
+                alt="Star 5 given"
+              />
             </div>
           </div>
+          <h2>Rachel Patel</h2>
           <p>I highly recommend the Writecream Business Description</p>
         </section>
       </article>
